--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 }
 .inicio {
   position: fixed;
+  top: 0%;
   width: 100%;
   height: 100%;
   background-color: #f7d4bc;
@@ -124,6 +125,23 @@ body {
 .container {
   display: flex;
 }
+
+.mobil-init {
+  width: 90%;
+  height: 80%;
+  margin: 15% auto;
+  display: flex;
+  border-radius: 15px;
+  background-color: rgba(250, 235, 215, 0.2);
+  box-shadow: 0px 25px 40px -10px rgba(0, 0, 0, 0.55);
+}
+
+.mobil-init img {
+  width: 90%;
+  height: 70%;
+  margin: auto;
+}
+
 .info {
   width: 90%;
   height: 100%;
@@ -237,6 +255,14 @@ body {
     }
   }
 
+  .mobil-init {
+    display: flex;
+  }
+
+  .navbar {
+    display: none;
+  }
+
   .gallery {
     display: flexbox;
     justify-content: center;
@@ -260,12 +286,14 @@ body {
     display: block;
     justify-content: center;
   }
-  .btn {
-    margin: auto 35% 5%;
-  }
 
+
+  a .btn {
+    margin: 5% 33%;
+  }
   .info p {
     width: 80%;
+    margin: auto;
     text-align: center;
   }
 }
