--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {
   width: 90%;
   height: 80%;
   margin: 15% auto;
-  display: flex;
+  display: none;
   border-radius: 15px;
   background-color: rgba(250, 235, 215, 0.2);
   box-shadow: 0px 25px 40px -10px rgba(0, 0, 0, 0.55);
