--- a/style.css
+++ b/style.css
@@ -127,18 +127,12 @@ body {
 }
 
 .mobil-init {
-  width: 90%;
-  height: 80%;
-  margin: 15% auto;
   display: none;
-  border-radius: 15px;
-  background-color: rgba(250, 235, 215, 0.2);
-  box-shadow: 0px 25px 40px -10px rgba(0, 0, 0, 0.55);
 }
 
 .mobil-init img {
   width: 90%;
-  height: 70%;
+  height: 50%;
   margin: auto;
 }
 
@@ -257,6 +251,10 @@ body {
 
   .mobil-init {
     display: flex;
+    width: 90%;
+    height: 100%;
+    margin-left: 5%;
+    justify-content: center;
   }
 
   .navbar {
@@ -289,7 +287,7 @@ body {
 
 
   a .btn {
-    margin: 5% 33%;
+    margin: 5% 30%;
   }
   .info p {
     width: 80%;
