--- a/style.css
+++ b/style.css
@@ -81,58 +81,6 @@ body {
     opacity: 1;
   }
 }
-.navbar {
-  width: 100%;
-  height: 5rem;
-  display: flex;
-  position: fixed;
-  justify-content: space-around;
-  background-color: rgba(255, 224, 181, 0.6);
-  z-index: 5;
-}
-
-.logoNav {
-  margin: auto auto auto 5%;
-}
-
-.logoNav h2 {
-  margin: auto;
-  font-family: "bubblez";
-  font-size: 2.5rem;
-  font-weight: 100;
-  color: #d84727;
-  justify-content: center;
-  align-items: center;
-}
-.navbar ul {
-  width: 30%;
-  display: flex;
-}
-.navbar ul li {
-  margin: auto;
-  padding: 1%;
-  list-style: none;
-  display: inline;
-  justify-content: space-between;
-  align-items: center;
-  transition: 0.6s;
-}
-
-.navbar ul li a {
-  text-decoration: none;
-  font-family: "avocado";
-  font-weight: 200;
-  font-size: 1.5rem;
-  color: #d84727;
-}
-
-.navbar ul li:hover {
-  transform: scale(1.3);
-}
-.navbar ul li a:hover {
-  color: #ff2f00;
-  text-shadow: -2px 2px 4px rgba(150, 150, 150, 0.6);
-}
 
 .container {
   display: flex;
@@ -448,5 +396,8 @@ background-color: #d84727;
    height: 200px;
    border-top-right-radius: 15px;
    border-bottom-left-radius: 0px;
+}
+.foot {
+  padding: 3%;
 }
 }
