--- a/style.css
+++ b/style.css
@@ -266,18 +266,45 @@ nav {
   }
 }
 
+.card {
+  width: 80%;
+  height: 80%;
+  background-color: antiquewhite;
+  background-image: url("./images/back-card.jpg");
+  background-size: contain;
+  background-blend-mode: hard-light;
+  display: flex;
+  flex-direction: column;
+  border-radius: 15px;
+  box-shadow: -1px 18px 23px 7px rgba(0,0,0,0.75);
+}
 
+
+.card h2 {
+  text-align: center;
+  margin: auto;
+}
+
+.card p {
+  text-align: center;
+  margin-top: 2px;
+  margin-bottom: 25px;
+}
 .container {
   display: flex;
 }
 
 .mobil-init {
   display: none;
+
 }
 
-.mobil-init img {
-  width: 90%;
-  height: 50%;
+.card img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  outline: 3px solid #000000;
+  outline-offset: 6px;
   margin: auto;
 }
 
@@ -452,6 +479,7 @@ nav {
 
 .area{
   max-height: 100%;
+  font-family: "roboto";
 }
 
 .bttn {
@@ -552,7 +580,7 @@ background-color: #d84727;
 
 
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 768px) {
 
   body {
     animation: none;
@@ -592,10 +620,15 @@ background-color: #d84727;
 
   .mobil-init {
     display: flex;
-    width: 90%;
+    width: 100%;
     height: 100%;
-    margin-left: 5%;
     justify-content: center;
+    align-items: center;
+  }
+
+
+  nav {
+    background-color: rgba(255, 224, 181, 0.6);
   }
 
   .navbar {
@@ -628,7 +661,7 @@ background-color: #d84727;
 
 
   a .btn {
-    margin: 5% 30%;
+    margin: 5% 35%;
   }
   .info p {
     width: 80%;
